buildscript {
    ext {
        springBootVersion = '1.5.20.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

plugins {
    id 'java'
    id 'war'
}

apply plugin: 'org.springframework.boot'

group = 'tk.burdukowsky'
version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

ext {
    swagger2Version = '2.8.0'
}

dependencies {
    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
    compile 'org.springframework.boot:spring-boot-starter-data-rest'
    compile 'org.springframework.boot:spring-boot-starter-security'
    compile 'org.springframework.boot:spring-boot-starter-web'
    compile 'io.jsonwebtoken:jjwt:0.9.0'
    runtime 'org.postgresql:postgresql'
    compile "io.springfox:springfox-swagger2:${swagger2Version}"
    compile "io.springfox:springfox-data-rest:${swagger2Version}"
    compile "io.springfox:springfox-swagger-ui:${swagger2Version}"
    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4'
    compile 'com.cloudinary:cloudinary-http44:1.18.0'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testCompile 'org.springframework.boot:spring-boot-starter-test'
    testCompile 'org.springframework.security:spring-security-test'
}
